--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <div class="container">
   <h2 class="contents-title text-center pt-5 mb-5">Introduction</h2>
 <div class="img-container ">
-  <img src="images/top.jpg" alt="" class="mb-5">
+  <img src="images/top.jpg" alt="" class="mb-sm-3 mb-xd-5">
   <div class="introduction-text ">
     <h4 class="mb-3 mb-sm-3 font-family-"><span class="h2 font-weight-bolder">"素材"</span>が決め手の体に優しいパン</h4>
 <p class="m-0 delete">天然酵母や焼きたてのパンの甘い香り漂う店内には定番から、</p>
