--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           <div class="hako1 mb-5">
             <p class="m-0">[住所] 〒422-8062 静岡市駿河区薬院2-15-2 アリババ薬院１F</p>
       <p class="m-0">[営業時間] 8:00~18:00</p>
-      <p class="m-0">[電話番号] 080-3748-1121</p>
+      <p class="m-0">[電話番号] 080-1XX1-1XX1</p>
       <p class="m-0">[定休日] 水曜日</p>
           </div>
        <div class="hako2 ">
