--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
 <link  rel="style.css" href="https://fonts.googleapis.com/css?family=Caveat" >
     <link rel="stylesheet" href="style.css">
-    <title>Hello, world!</title>
+    <title>P's Bread</title>
   </head>
   <body>
     
